Slight corrections to Maven skin
git-svn-id: https://svn.code.sf.net/p/jaas-rimap/code/skin@5 5dfec428-682e-0410-9708-b860afbd1140

--- a/src/main/resources/META-INF/maven/site.vm
+++ b/src/main/resources/META-INF/maven/site.vm
@@ -40,7 +40,7 @@
   #if ( $alignedFileName == $currentItemHref )
     <a class="current" href="$currentItemHref">$item.name</a>
   #else
-    <a href="currentItemHref">$item.name</a>
+    <a href="$currentItemHref">$item.name</a>
   #end
 #end
 
