--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -102,7 +102,7 @@ body {
   margin-left: 1em
 }
 
-.codeblock {
+.source {
   background-color: white;
   padding: 0.5em;
   border: 2px solid black;
